{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 57,
  "lineage": "9f400db1-0bcd-9281-e605-7a99e77ae5e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "zing-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:internet-gateway/igw-05b7edde0b16df92b",
            "id": "igw-05b7edde0b16df92b",
            "owner_id": "243646955027",
            "tags": {
              "Name": "zing-igw"
            },
            "tags_all": {
              "Name": "zing-igw"
            },
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-0958b7b6ed62ed35d",
            "id": "rtb-0958b7b6ed62ed35d",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_1"
            },
            "tags_all": {
              "Name": "private_route_1"
            },
            "timeouts": null,
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-0fe87787909413e9a",
            "id": "rtb-0fe87787909413e9a",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private_route_2"
            },
            "tags_all": {
              "Name": "private_route_2"
            },
            "timeouts": null,
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:route-table/rtb-070299f752549ad61",
            "id": "rtb-070299f752549ad61",
            "owner_id": "243646955027",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05b7edde0b16df92b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route"
            },
            "tags_all": {
              "Name": "public_route"
            },
            "timeouts": null,
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.zing-igw",
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09dccb6cb1b7b3005",
            "route_table_id": "rtb-0958b7b6ed62ed35d",
            "subnet_id": "subnet-0cfbc8c61b99fafcc"
          },
          "dependencies": [
            "aws_route_table.private_route-1",
            "aws_subnet.zing-pri-sub-1",
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01071d5bbdb978e9f",
            "route_table_id": "rtb-0fe87787909413e9a",
            "subnet_id": "subnet-0dba834f58d730f2c"
          },
          "dependencies": [
            "aws_route_table.private_route-2",
            "aws_subnet.zing-pri-sub-2",
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0895de96386ff5bed",
            "route_table_id": "rtb-070299f752549ad61",
            "subnet_id": "subnet-08fd1fad06dfe4dd5"
          },
          "dependencies": [
            "aws_internet_gateway.zing-igw",
            "aws_route_table.public_route",
            "aws_subnet.zing-pub-sub-1",
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8405e7042ca50c",
            "route_table_id": "rtb-070299f752549ad61",
            "subnet_id": "subnet-0f12dfecc569949d9"
          },
          "dependencies": [
            "aws_internet_gateway.zing-igw",
            "aws_route_table.public_route",
            "aws_subnet.zing-pub-sub-2",
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "zing-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:security-group/sg-05ded73e2c3ce0bd0",
            "description": "Allow ALL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ded73e2c3ce0bd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "zing-sg",
            "name_prefix": "",
            "owner_id": "243646955027",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "zing-sg"
            },
            "tags_all": {
              "Name": "zing-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zing-pri-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0cfbc8c61b99fafcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "69.69.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cfbc8c61b99fafcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zing-pri-sub-1"
            },
            "tags_all": {
              "Name": "zing-pri-sub-1"
            },
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zing-pri-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0dba834f58d730f2c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "69.69.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dba834f58d730f2c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zing-pri-sub-2"
            },
            "tags_all": {
              "Name": "zing-pri-sub-2"
            },
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zing-pub-sub-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-08fd1fad06dfe4dd5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "69.69.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd1fad06dfe4dd5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zing-pub-sub-1"
            },
            "tags_all": {
              "Name": "zing-pub-sub-1"
            },
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "zing-pub-sub-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:subnet/subnet-0f12dfecc569949d9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "69.69.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f12dfecc569949d9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "243646955027",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "zing-pub-sub-2"
            },
            "tags_all": {
              "Name": "zing-pub-sub-2"
            },
            "vpc_id": "vpc-041cbd996bda2f42d"
          },
          "dependencies": [
            "aws_vpc.zing-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "zing-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:243646955027:vpc/vpc-041cbd996bda2f42d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "69.69.0.0/16",
            "default_network_acl_id": "acl-002335fccf95383f5",
            "default_route_table_id": "rtb-0a5c83e169bfd7011",
            "default_security_group_id": "sg-0d5448066af3083f5",
            "dhcp_options_id": "dopt-015f69a413fb5d3ec",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-041cbd996bda2f42d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a5c83e169bfd7011",
            "owner_id": "243646955027",
            "tags": {
              "Name": "zing-vpc"
            },
            "tags_all": {
              "Name": "zing-vpc"
            }
          }
        }
      ]
    }
  ]
}